--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.UWP/project.json
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client.UWP/project.json
@@ -1,10 +1,14 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.4.0.280"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.2",
+    "sqlite-net-pcl": "1.4.118",
+    "SQLite.Net-PCL": "3.1.1",
+    "SQLite.Net.Async-PCL": "3.1.1",
+    "Xam.Plugin.Connectivity": "3.0.3",
+    "Xamarin.Forms": "2.5.0.91635"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10240": {}
   },
   "runtimes": {
     "win10-arm": {},
